2005-06-14  David Bateman  <dbateman@free.fr>

    * dMatrix.cc (Matrix::too_large_for_float): Special case NaN and NA values.
    * CMatrix.cc (ComplexMatrix::too_large_for_float): Ditto.

2005-06-02  John W. Eaton  <jwe@octave.org>

	* Array.cc (assignN): Try harder to correctly resize previously
	empty LHS.

2005-05-16  David Bateman  <dbateman@free.fr>

	* dSparse.h: Change UMFPACK_LONG_IDX to IDX_TYPE_LONG.
	* CSparse.h: ditto.

2005-05-10  David Bateman <dbateman@free.fr>

	* dSparse.cc (determinant): Free numeric factorization after
	sucessful calculation.
	* CSparse.cc (determinant): ditto.

2005-05-06  John W. Eaton  <jwe@octave.org>

	* dbleCHOL.cc (CHOL::init): Use xelem instead of elem for indexing
	chol_mat.
	(chol2mat_internal, chol2mat, CHOL::inverse): New functions.
	* dbleCHOL.h (chol2mat_internal, chol2mat, CHOL::inverse):
	Provide decls.

	* CmplxChol.cc (ComplexCHOL::init): Use xelem instead of elem for
	indexing chol_mat.
	(chol2mat_internal, chol2mat, ComplexCHOL::inverse): New functions.
	* CmplxCHOL.h (chol2mat_internal, chol2mat, CmplxCHOL::inverse):
	Provide decls.

2005-05-05  John W. Eaton  <jwe@octave.org>

	* Array.cc (Array<T>::permute): Call chop_trailing_singletons on
	retval before return.

2005-05-04  John W. Eaton  <jwe@octave.org>

	* cmd-edit.cc (gnu_readline::do_readline): Extract const char*
	from prompt outside of INTERRUPT_IMMEDIATELY_IN_FOREIGN_CODE block.

2005-05-02  John W. Eaton  <jwe@octave.org>

	* Makefile.in (LINK_DEPS): List $(UMFPACK_LIBS) ahead of $(BLAS_LIBS).
	From Dmitri A. Sergatskov <dasergatskov@gmail.com>.

2005-04-29  David Bateman  <dbateman@free.fr>

	* dSparse.cc (trisolve): Diagonal passed to lapack zptsv is type
	double.  Correct indexing for upper diagonal elements for sparse
	tridiagonal.
	* CSparse.cc (trisolve): ditto.

	* CSparse.h (UMFPACK_ZNAME): Define macro to pick version of
	UMFPACK for 64-bit.
	* CSparse.cc (UMFPACK_ZNAME): Replace all umfpack_zi_* with 
	UMFPACK_ZNAME(*).